--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "webpack": "4.42.0",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "react-router-dom": "latest",
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
